# quantopy

./: .gitignore  .readthedocs.yml  LICENSE  README.md  environment.yml  quantopy.code-workspace  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: requirements.txt  return-basics-real-data.ipynb  return-basics.ipynb
docs/source/: conf.py  index.rst  index.rst.template  requirements.txt
docs/source/getting_started/: index.rst
docs/source/reference/: index.rst  return_dataframe.rst  return_series.rst
docs/source/user_guide/: 10min.rst  index.rst  return_calculations.rst
docs/source/whatsnew/: index.rst
quantopy/: __init__.py  _typing.py  periods.py  portfolio_data.py  returns.py  simulate.py
quantopy/core/: return_dataframe.py  return_frame.py  return_series.py
quantopy/finance/: __init__.py  ratio.py
quantopy/finance/tests/: test_ratio.py
quantopy/get/: get.py
quantopy/random/: __init__.py  generator.py
quantopy/random/tests/: test_generator.py
quantopy/ratio/: __init__.py  financial.py
quantopy/ratio/tests/: test_financial.py
quantopy/stats/: __init__.py  financial.py  period.py  stats.py
quantopy/stats/tests/: test_financial.py  test_stats.py
tests/: test_returns.py  test_simulate.py
tests/core/: test_return_dataframe.py  test_return_frame.py  test_return_series.py
tutorials/notebooks/: 01-fundamentals-of-returns.ipynb  02-fundamentals-of-risk-adjusted-returns-with-real-data.ipynb  03-deviations-from-normality.ipynb
web/pandas/about/: citing.md
