[metadata]
name = quantopy
version = 0.0.1
author = Example Author
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ismaelJimenez/Quantopy
project_urls =
    Bug Tracker = https://github.com/ismaelJimenez/Quantopy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
include = quantopy, quantopy.*

[flake8]
max-line-length = 100
exclude =
    build/
    __init__.py

[isort]
profile = black
combine_as_imports = True
line_length = 100
force_grid_wrap = True
force_sort_within_sections = True
skip_glob = env,
skip = quantopy/__init__.py

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
check_untyped_defs = True
strict_equality = True
warn_redundant_casts = True
warn_unused_ignores = True
show_error_codes = True
